[package]
name = "corvus"
version = "0.1.0"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
edition = "2021"

[dependencies]
defmt = "^0.3.5"
defmt-rtt = "^0.4.0"
panic-probe = { version = "^0.3.1", features = ["print-defmt"] }

cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "^0.7.3"

rtic = { version = "^2.0.1", features = ["thumbv7-backend"] }

#hal = { package = "stm32-hal2", path = "../../stm32-hal", optional = true}
hal = { package = "stm32-hal2", version = "^1.8.5", optional = true}

# CMSIS-DSP, for FFTs, FIR etc. C lib wrapped with FFI.
# Trouble with LIBCLANG? See this: https://github.com/rust-lang/rust-bindgen/blob/master/book/src/requirements.md
cmsis-dsp-sys = "^0.3.1"
cmsis-dsp-api = { git = "https://github.com/David-OConnor/cmsis-dsp-api"}

lin_alg = { version = "^1.0.0", features = ["no_std"] }
ahrs = { git = "https://github.com/David-OConnor/ahrs" }

num-traits = { version = "^0.2.15", default_features = false } # Absolute value, powers etc.

cfg-if = "^1.0.0"  # if/else blocks for feature-gating based on flight controller and MCU layout

stm32-usbd = { version = "^0.6.0", optional = true}
synopsys-usb-otg = { version = "^0.3.0", optional = true}
usb-device = "^0.2.9"
usbd-serial = "^0.1.1"

fdcan = "^0.2.0"

# `Chrono` for GNSS timestamp
chrono = { version = "^0.4.23", default-features = false }

packed_struct = { version = "^0.10.1", default_features = false }

# To parse enums from their integer repr
num_enum = { version = "^0.7.0", default_features = false }

# todo: Update this to use the crate.
dronecan = { git = "https://github.com/David-OConnor/dronecan", optional = true }
#mavlink = { version = "^0.12.2", default_features = false }
anyleaf_usb = { git = "https://github.com/David-OConnor/anyleaf_usb" }

# Use these features to specify GPIO mapping, and which peripherals to use.
[features]
default = ["h7", "quad"]
g4 = ["hal/g4rt", "hal/g473", "hal/usb", "hal/can_fd_g", "stm32-usbd", "dronecan/hal_g473"]
h7 = ["hal/h7rt", "hal/h743v", "hal/usbotg_hs", "hal/can_fd_h", "synopsys-usb-otg", "dronecan/hal_h7" ]

quad = [] # For quadcopter aircraft
fixed-wing = [] # For fixed-wing aircraft
# Periodically print the status of various sytems and sensor data to console. For debugging.
print-status = []

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-