[package]
name = "anyleaf_quadcopter_firmware"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

cortex-m-rtic = "1.0.0"

stm32-hal2 = { path = "../../../stm32-hal", optional = true}

stm32-usbd = { version = "0.6.0", optional = true}

# CMSIS-DSP, for FFTs, FIR etc. C lib wrapped with FFI.
# Trouble with LIBCLANG. See this: https://github.com/rust-lang/rust-bindgen/blob/master/book/src/requirements.md
#cmsis-dsp-sys = "0.3.1"
cmsis-dsp-sys = { git = "https://github.com/jacobrosenthal/cmsis-dsp-sys", branch = "master" }
cmsis-dsp-api = { path = "../../../cmsis-dsp-api"}

num-traits = {version = "0.2.14", default_features = false} # Absolute value etc.

cfg-if = "1.0.0"  # if/else blocks for feature-gating based on flight controller and MCU layout

usb-device = "0.2.8"
usbd-serial = "0.1.1"

# To convert integers to enums.
num_enum = "0.5.7"

# Use these features to specify GPIO mapping, and which peripherals to use.
[features]
# We use `mercury-xx` features for board-specific things like pin layout. We use
# `xx` features for STM32-familiy specific things, like PLL config.
mercury-g4 = ["g4"]
mercury-h7 = ["h7"]
g4 = ["stm32-hal2/g4rt", "stm32-hal2/g431", "stm32-hal2/usb", "stm32-usbd"]
h7 = ["stm32-hal2/h7rt", "stm32-hal2/h743"]

default = ["mercury-g4"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-